feat/NoteShrinkerModifier: Modifier structure integration + Note shrinker added

--- a/FightSabers/FightSabers/1.6.0.csproj
+++ b/FightSabers/FightSabers/1.6.0.csproj
@@ -97,6 +97,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\ExperienceSystem.cs" />
+    <Compile Include="Models\Abstracts\Modifier.cs" />
+    <Compile Include="Models\Interfaces\IModifier.cs" />
+    <Compile Include="Models\Modifiers\NoteShrinker.cs" />
+    <Compile Include="Patches\GameNoteControllerInitPatch.cs" />
     <Compile Include="UI\FightSabersProgress.cs" />
     <Compile Include="Models\MonsterStatus.cs" />
     <Compile Include="Models\SceneState.cs" />
