--- a/FightSabers/FightSabers/1.6.0.csproj
+++ b/FightSabers/FightSabers/1.6.0.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Core\ExperienceSystem.cs" />
     <Compile Include="Models\Abstracts\Modifier.cs" />
     <Compile Include="Models\Interfaces\IModifier.cs" />
+    <Compile Include="Models\Modifiers\ColorSucker.cs" />
     <Compile Include="Models\Modifiers\NoteShrinker.cs" />
     <Compile Include="Patches\GameNoteControllerInitPatch.cs" />
     <Compile Include="UI\FightSabersProgress.cs" />
