feat/TimeWarper: Added a time warper modifier

--- a/FightSabers/FightSabers/1.6.0.csproj
+++ b/FightSabers/FightSabers/1.6.0.csproj
@@ -101,7 +101,9 @@
     <Compile Include="Models\Interfaces\IModifier.cs" />
     <Compile Include="Models\Modifiers\ColorSucker.cs" />
     <Compile Include="Models\Modifiers\NoteShrinker.cs" />
+    <Compile Include="Models\Modifiers\TimeWarper.cs" />
     <Compile Include="Patches\GameNoteControllerInitPatch.cs" />
+    <Compile Include="TimeController.cs" />
     <Compile Include="UI\FightSabersProgress.cs" />
     <Compile Include="Models\MonsterStatus.cs" />
     <Compile Include="Models\SceneState.cs" />
