feat/FSMovableExp: Can now move the experience bar panel with the controller

--- a/FightSabers/FightSabers/1.6.0.csproj
+++ b/FightSabers/FightSabers/1.6.0.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="Core\ExperienceSystem.cs" />
     <Compile Include="Models\Abstracts\Modifier.cs" />
+    <Compile Include="Models\Float3.cs" />
     <Compile Include="Models\Interfaces\IModifier.cs" />
     <Compile Include="Models\Modifiers\ColorSucker.cs" />
     <Compile Include="Models\Modifiers\NoteShrinker.cs" />
