feat/ExclusiveContent: Exclusive avatars structure implemented

--- a/FightSabers/FightSabers/1.6.0.csproj
+++ b/FightSabers/FightSabers/1.6.0.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\ExclusiveContent\ExclusiveContentManager.cs" />
+    <Compile Include="Core\ExclusiveContent\ExclusiveAvatarsManager.cs" />
     <Compile Include="Core\ExclusiveContent\ExclusivePlatformsManager.cs" />
     <Compile Include="Core\ExclusiveContent\ExclusiveSabersManager.cs" />
     <Compile Include="Core\ExperienceSystem.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Models\Quests\MonsterDamageQuest.cs" />
     <Compile Include="Models\Quests\MonsterKillQuest.cs" />
     <Compile Include="Models\RewardItems\PlatformReward.cs" />
+    <Compile Include="Models\RewardItems\AvatarReward.cs" />
     <Compile Include="Models\RewardItems\SaberReward.cs" />
     <Compile Include="Patches\GameNoteControllerAwakePatch.cs" />
     <Compile Include="TimeController.cs" />
@@ -223,6 +225,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Rewards\Light Disc.plat" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Rewards\Ooka Miko.avatar" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
