--- a/FightSabers/FightSabers.csproj
+++ b/FightSabers/FightSabers.csproj
@@ -9,14 +9,7 @@
 		<LocalRefsDir Condition="Exists('..\Refs')">..\Refs</LocalRefsDir>
 		<BeatSaberDir>$(LocalRefsDir)</BeatSaberDir>
 		<AppOutputBase>$(MSBuildProjectDirectory)\</AppOutputBase>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-		<DebugType>full</DebugType>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-		<DebugType>pdbonly</DebugType>
+		<DebugType>portable</DebugType>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="$(DefineConstants.Contains('CIBuild')) OR '$(NCrunch)' == '1'">
@@ -53,10 +46,6 @@
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Unity.TextMeshPro.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="IPA.Loader">
-			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
 		<Reference Include="Main">
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
 			<Private>False</Private>
@@ -73,8 +62,16 @@
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMUI.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		<Reference Include="IPA.Loader">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\IPA.Loader.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
 		<Reference Include="0Harmony">
 			<HintPath>$(BeatSaberDir)\Libs\0Harmony.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="SemVer">
+			<HintPath>$(BeatSaberDir)\Libs\SemVer.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="BSML">
@@ -96,14 +93,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')"/>
-		<None Include="Directory.Build.targets" Condition="Exists('Directory.Build.targets')"/>
-		<None Include="FightSabers.csproj.user" Condition="Exists('FightSabers.csproj.user')"/>
+		<None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
+		<None Include="Directory.Build.targets" Condition="Exists('Directory.Build.targets')" />
+		<None Include="FightSabers.csproj.user" Condition="Exists('FightSabers.csproj.user')" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="manifest.json"/>
-		<EmbeddedResource Include="UI\Views\*.bsml"/>
+		<EmbeddedResource Include="manifest.json" />
+		<EmbeddedResource Include="UI\Views\*.bsml" />
 	</ItemGroup>
 
 	<ItemGroup>
