--- a/FightSabers/FightSabers.csproj
+++ b/FightSabers/FightSabers.csproj
@@ -54,6 +54,10 @@
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Main.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		<Reference Include="BeatmapCore">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\BeatmapCore.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
 		<Reference Include="GamePlayCore">
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GamePlayCore.dll</HintPath>
 			<Private>False</Private>
