--- a/FightSabers/FightSabers.csproj
+++ b/FightSabers/FightSabers.csproj
@@ -66,6 +66,10 @@
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMLib.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		<Reference Include="HMRendering">
+			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMRendering.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
 		<Reference Include="HMUI">
 			<HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\HMUI.dll</HintPath>
 			<Private>False</Private>
@@ -106,7 +110,7 @@
 			<HintPath>$(BeatSaberDir)\Plugins\SiraUtil.dll</HintPath>
 			<Private>false</Private>
 		</Reference>
-	</ItemGroup>
+    </ItemGroup>
 
 	<ItemGroup>
 		<None Include="Directory.Build.props" Condition="Exists('Directory.Build.props')" />
